--- a/src/template.html
+++ b/src/template.html
@@ -6,7 +6,7 @@
 	<meta name="theme-color" content="#333333">
 
 	%sapper.base%
-
+	<link href="https://fonts.googleapis.com/css2?family=Zilla+Slab:ital,wght@0,600;1,500&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="global.css">
 	<link rel="manifest" href="manifest.json" crossorigin="use-credentials">
 	<link rel="icon" type="image/png" href="favicon.png">
